--- a/.github/workflows/despliegue_docker.yml
+++ b/.github/workflows/despliegue_docker.yml
@@ -25,8 +25,8 @@ jobs:
       - name: Build and push DB Docker image
         run: |
           cd mysql
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/mi_cine:v1 .
-          docker push ${{ secrets.DOCKER_USERNAME }}/mi_cine:v1
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/mi_cine2:v1 .
+          docker push ${{ secrets.DOCKER_USERNAME }}/mi_cine2:v1
 
       # Construir y subir la imagen de la aplicación
       - name: Build and push PHP Docker image
